static/css/exercise.css
:root {
  color-scheme: dark;
  --bg: #1d2021;
  --bg-s: #32302f;
  --bg-1: #3c3836;
  --bg-2: #504945;
  --bg-3: #665c54;
  --bg-4: #7c6f64;
  --fg: #fbf1c7;
  --fg-1: #ebdbb2;
  --fg-2: #d5c4a1;
  --gray: #a89984;
  --red: #cc241d;
  --red-alt: #fb4934;
  --green: #98971a;
  --green-alt: #b8bb26;
  --yellow: #d79921;
  --yellow-alt: #fabd2f;
  --blue: #458588;
  --blue-alt: #83a598;
  --purple: #b16286;
  --purple-alt: #d3869b;
  --orange: #d65d0e;
  --orange-alt: #fe8019;
  --aqua: #689d6a;
  --aqua-alt: #8ec07c;
  --brown: #B17744;
}

body {
  font-family: sans-serif;
  color: var(--fg);
  background-color: var(--bg); 
  margin: 0 auto;
  max-width: 80ch;
  -webkit-font-smoothing: antialiased;
}

#header {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  background-color: var(--bg-s);
  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
  z-index: 1;
  font-size: 1.3rem;
}
h1 {
  padding: .7rem;
  margin: 0;
  font-weight: 400;
  text-align: center;
  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.4);
}

#new-set {
  position: relative;
  height: 9rem;
  background-color: var(--bg-3);
  box-shadow: 0 -5px 50px rgba(0, 0, 0, 0.4);
  padding-top: .3rem;
}
#new-set .new-input {
  display: block;
  padding: 1rem 0 0 4rem;
  font-size: 1.6rem;
}
#new-set input {
  font-size: 2rem;
  width: 6ch;
  color: var(--bg);
  background-color: var(--fg);
  border: none;
  border-radius: .2rem;
}
#new-set .time-input {
  width: 3ch;
}


#historical-sets {
  margin-top: calc(2rem + .7rem + 1rem);
  max-height: calc(100vh - 2rem - .7rem - 1rem - 9rem);
  overflow: auto;
}
.set-group {
  border-bottom: 3px solid var(--gray);
}
.set-card {
  display: block;
  padding: 1rem 2rem;
  text-decoration: none;
  border-bottom: 1px solid var(--bg-2);
  color: var(--fg);
}
.set-card h3 {
  margin: 0;
  font-weight: bold;
}
.set-card small {
  color: var(--fg-2);
}

#fab {
  position: absolute;
  top: -1.9rem;
  right: 1rem;
  width: 3.8rem;
  height: 3.8rem;
  border: none;
  border-radius: 3rem;
  background-color: var(--fg);
  color: var(--bg-1);
  font-size: 3rem;
  font-weight: 100;
  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.4), 0 0 30px rgba(255, 255, 255, 0.15);
  transition: rotate .2s;
}
.save-success {
  background-color: var(--green-alt) !important;
}
.save-error {
  background-color: var(--red) !important;
  rotate: 45deg;
}

